--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.application.name=userManagement
-spring.datasource.url=JDBC:postgresql://localhost:5432/userdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/vm
 spring.datasource.username=postgres
 spring.datasource.password=jakhodiya
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
